--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a class="navbar-brand" href="#">A simple shopping list!</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/index">Home</a></li>
+          <li><a href="/index">Home</a></li>
           <li><a href="/users">Users</a></li>
           <li><a href="/logout">Log out</a></li>
         </ul>
@@ -24,13 +24,7 @@
 
     <div class="container-fluid shopping-list">
 
-      <div class="input-group rounded">
-        <input type="search" class="form-control rounded" placeholder="Search for items..." aria-label="Search"
-          aria-describedby="search-addon" />
-        <span class="input-group-text border-0" id="search-addon">
-          <i class="fas fa-search"></i>
-        </span>
-      </div>
+      <input id="search-items" class="col-10" placeholder="Search for items..."></input>
 
       <div id="shopping-list"> </div>
 
