--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
           <a class="navbar-brand" href="#">A simple shopping list!</a>
         </div>
         <ul class="nav navbar-nav">
-          <li class="active"><a href="/index">Home</a></li>
+          <li><a href="/index">Home</a></li>
           <li><a href="/users">Users</a></li>
           <li><a href="/logout">Log out</a></li>
         </ul>
