--- a/login.html
+++ b/login.html
@@ -14,28 +14,21 @@
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">A simple shopping list!</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li><a href="/index">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="/logout">Log out</a></li>
-        </ul>
+          <ul class="nav navbar-nav" id="navigation">
+            <li><a href="/index">Home</a></li>
+            <li><a href="/users">Users</a></li>
+          </ul>
       </div>
     </nav>
     
     <div class="container">
-      <form class="form-signin">
+      <form class="form-signin" id="loginform" method="POST" action="/login">
         <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <label for="inputUsername" class="sr-only">Please enter username...</label>
+        <input type="text" name="username" class="form-control" placeholder="Username" required autofocus>
+        <label for="inputPassword" class="sr-only">Please enter password...</label>
+        <input type="password" name="password" class="form-control" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Log me in!</button>
       </form>
     </div> 
 
