--- a/users.html
+++ b/users.html
@@ -9,16 +9,15 @@
   </head>
 
 	<body>
+    
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="#">A simple shopping list!</a>
-        </div>
-        <ul class="nav navbar-nav">
-          <li><a href="/index">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="/logout">Log out</a></li>
-        </ul>
+          <ul class="nav navbar-nav" id="navigation">
+            <li><a href="/index">Home</a></li>
+            <li><a href="/users">Users</a></li>
+          </ul>
       </div>
     </nav>
 
